[package]
name = "torrent_recovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = { version = "4.1.4", features = ["derive", "cargo"]}
lava_torrent = "0.8.1"
log = { version = "0.4.17", features = ["std"] }
simple_logger = { version = "4.0.0", features = ["timestamps", "stderr"] }
tokio = { version = "1.24.2", features = ["full"] }
transmission-rpc = "0.4.0"
url = "2.3.1"
